wrapping btn in their respective component classes to avoid overwriting bootstrap classes

--- a/src/static/sass/style/_layout.scss
+++ b/src/static/sass/style/_layout.scss
@@ -31,69 +31,72 @@ p{
 /**
 * Buttons
 */
-.btn{
-  border-radius: 2px;
-  cursor: pointer;
-  display: inline-block;
-  font-family: $fontHeading;
-  font-size: 0.96em;
-  text-transform: uppercase;
-  text-decoration: none;
-  height: 35px;
-  padding: 0 45px 0 30px;
-  box-sizing: border-box;
-  line-height: 35px;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.1);
-  background-image: $arrowRightDarkUrl;
-  background-position: center right 10px;
-  background-repeat: no-repeat;
-  margin: 10px;
-  background-color: $clGrey;
-  color: $clDark;
-
-  &:hover{
-    background-color: lighten($clGrey, 5);
-    box-shadow: 0 3px 3px rgba(0,0,0,0.1);
-  }
-
-  &.primary{
-    background-color: $clPrimary;
-    color: $clWhite;
-    background-image: $arrowRightWhite40Url;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+// Wrapping btn to avoid overwriting bootstrap stylings
+.banner {
+  .btn{
+    border-radius: 2px;
+    cursor: pointer;
+    display: inline-block;
+    font-family: $fontHeading;
+    font-size: 0.96em;
+    text-transform: uppercase;
+    text-decoration: none;
+    height: 35px;
+    padding: 0 45px 0 30px;
+    box-sizing: border-box;
+    line-height: 35px;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.1);
+    background-image: $arrowRightDarkUrl;
+    background-position: center right 10px;
+    background-repeat: no-repeat;
+    margin: 10px;
+    background-color: $clGrey;
+    color: $clDark;
 
     &:hover{
-      background-color: lighten($clPrimary, 5);
+      background-color: lighten($clGrey, 5);
+      box-shadow: 0 3px 3px rgba(0,0,0,0.1);
     }
 
-    &.plus{
-      background-image: $iconPlusUrl;
+    &.primary{
+      background-color: $clPrimary;
+      color: $clWhite;
+      background-image: $arrowRightWhite40Url;
+      box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+
+      &:hover{
+        background-color: lighten($clPrimary, 5);
+      }
+
+      &.plus{
+        background-image: $iconPlusUrl;
+      }
+
     }
 
-  }
-
-  &.white{
-    background-color: $clWhite;
-    &:hover{
+    &.white{
       background-color: $clWhite;
-      opacity: 0.9;
+      &:hover{
+        background-color: $clWhite;
+        opacity: 0.9;
+      }
     }
-  }
 
-  &.blank{
-    box-shadow: none;
-    background-color: transparent;
-    background-image: none;
-    padding: 0 30px;
-
-    &:hover{
+    &.blank{
+      box-shadow: none;
       background-color: transparent;
-      opacity: 0.9;
-    }
+      background-image: none;
+      padding: 0 30px;
 
-    &.warning:hover{
-      color: $clSecondary;
-      opacity: 1;
+      &:hover{
+        background-color: transparent;
+        opacity: 0.9;
+      }
+
+      &.warning:hover{
+        color: $clSecondary;
+        opacity: 1;
+      }
     }
   }
 }
@@ -101,7 +104,6 @@ p{
 /**
 * Forms
 */
-
 .label{
   color: $clPrimary;
   text-transform: uppercase;
@@ -134,7 +136,6 @@ textarea{
 }
 
 /* Page layout */
-
 .content{
   position: relative;
   max-width: $maxPageWidth;
